--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <version>0.0.1-SNAPSHOT</version>
     <properties>
 		<maven.compiler.target>11</maven.compiler.target>
-		<maven.compilet.source>11</maven.compilet.source>
+		<maven.compiler.source>11</maven.compilet.source>
 	    	<exec.mainClass>dad.main.Main</exec.mainClass>
 	</properties>
 	<dependencies>
